hphp/hack/test/typecheck/namespace/use_conflict_function3.php.exp
File "use_conflict_function3.php", line 5, characters 10-11:
Cannot declare foo because the name was explicitly used earlier via a `use' statement on line 3 (Parsing[1002])
