hphp/hack/test/typecheck/namespace/use_conflict_function3.php
<?hh

use function foo;

function foo(): void {}
